# compiler

./: .gitignore  LICENSE  README.md  __main__.py  config.py  pyproject.toml
code_gen/: __init__.py  code_gen.py
executable_gen/: __init__.py  executable_gen.py  os_linux.py
file_reader/: __init__.py  file_reader.py
my_ast/: __init__.py  ast.py  end_node.py  node.py  op_node.py  oprnd_node.py  root_node.py  start_node.py
parser/: parser.py
pipeline/: __init__.py  pipeline.py
tests/: test1.s  test2.s  test_ast.py  test_code_gen.py  test_file_reader.py  test_parser.py  test_pipeline.py  test_tokenizer.py
tokenizer/: estate.py  tokenizer.py
